# django-example

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
_config/: settings.py  urls.py  wsgi.py
_docker/: README.md
_docker/memcached/: docker-compose.yaml
_docker/mysql/: docker-compose.yaml
_docker/postgresql/: docker-compose.yaml
_docker/redis/: docker-compose.yaml
_hosting/cpanel/: passenger_wsgi.py
_hosting/heroku/: Procfile
_hosting/heroku/uvicorn/: Procfile
_hosting/python-anywhere/: README.md  user_pythonanywhere_com_wsgi.py
_scripts/: clear_migrations.py  clear_migrations.sh  create_env_file.py  create_requirements.py  example.env  gunicorn-uvicorn.sh  run_collectstatic.py  run_create_superuser.py  run_migration.py  set_up_project.py
accounts/: urls.py
accounts/templates/accounts/: profile.html  signup.html
home/: sitemap.py  urls.py  views.py
home/templates/home/: home.html
templates/: 400.html  403.html  404.html  500.html
templates/base/: base.html
templates/base/components/: authenticated.html  footer.html  navbar.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
tools/: regex.py
