[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Renato Cruz <zkpcvm6dz@mozmail.com>"]
readme = "README.md"
packages = [{include = "django_template"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
django = "^4.1.5"
whitenoise = "^6.3.0"
django-environ = "^0.9.0"
django-bootstrap5 = "^22.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
autopep8 = "^2.0.1"
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
